@@ -41,15 +41,7 @@
             "$ref": "request.json"
         },
         "tags": {
-            "type": ["object", "null"],
-            "description": "A flat mapping of user-defined tags with string values.",
-            "patternProperties": {
-                "^[^.*\"]*$": {
-                    "type": ["string", "null"],
-                    "maxLength": 1024
-                }
-            },
-            "additionalProperties": false
+            "$ref": "tags.json"
         },
         "user": {
             "$ref": "user.json"
