@@ -14,6 +14,7 @@ https://github.com/elastic/apm-server/compare/6.4\...master[View commits]
 
 - Provide basic server information at `/` {pull}1197[1197]
 - Add pipeline registration and pipeline usage {pull}1258[1258]
+- Allow sending `tags` for `spans`, that get indexed in ES {pull}1156[1156].
 
 [[release-notes-6.4]]
 == APM Server version 6.4
